...
        android:onClick="info"
        android:background="@drawable/info_icon"
        android:layout_gravity="end"
        tools:ignore="ContentDescription" />

    <view
        android:id="@+id/viewDrawCanvas"
        class="com.clavicusoft.wumpus.Draw.DrawCanvas"
        layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5.17"
        android:layout_marginBottom="5dp"
...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnAddCave"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="addC"
                android:text="Agregar cueva"
                android:textSize="13sp"
                android:textColor="@color/white"
                android:background="@color/white_button"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnAddArc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="addA"
                android:text="Agregar camino"
                android:textSize="13sp"
                android:textColor="@color/white"
                android:background="@color/white_button"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                tools:ignore="ContentDescription" />
...
                android:background="@color/white_button"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/imgBtnCheck"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:elevation="1dp"
                android:onClick="checkD"
                android:text="Guardar dibujo"
                android:textSize="13sp"
                android:textColor="@color/white"
                android:background="@color/white_button"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                tools:ignore="ContentDescription" />
...
