...
        android:layout_width="match_parent"
        android:layout_height="172dp"
        android:layout_weight="0.92"
        />

    <Button
        android:id="@+id/bttnStartGame"
        android:layout_gravity="center"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:onClick="startGame"
        android:textColor="@color/white"
        android:background="@color/white_button"
        android:layout_marginBottom="10dp"
        android:text="Iniciar el juego" />

    <Button
        android:id="@+id/bttnDrawLab"
        android:layout_gravity="center"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:onClick="drawLabyrinthView"
        android:textColor="@color/white"
        android:background="@color/white_button"
        android:layout_marginBottom="10dp"
        android:text="Dibujar un laberinto" />

    <Button
        android:id="@+id/bttnChooseLib"
        android:layout_gravity="center"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:onClick="selectFromLibView"
        android:textColor="@color/white"
        android:background="@color/white_button"
        android:text="Biblioteca de laberintos" />
</LinearLayout>

