<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/other_background_purple"
    tools:context="com.clavicusoft.wumpus.Select.Multiplayer">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="Compartir Laberintos Personalizados"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

            <Button
                android:id="@+id/btOnBluetooth"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                android:background="@color/white_button"
                android:onClick="send"
                android:text="Enviar"
                android:textSize="18sp"
                android:textColor="@color/white" />


            <Button
                android:id="@+id/btVisible"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white_button"
                android:onClick="receive"
                android:text="Recibir"
                android:textSize="18sp"
                android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>
